# scion

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  go_deps.bzl
acceptance/common/: BUILD.bazel
doc/: ColibriDesign.rst  index.rst
doc/protocols/: scion-header.rst
go/co/: BUILD.bazel  main.go
go/co/reservation/: BUILD.bazel  index.go  path.go  path_test.go  request_response.go  types.go
go/co/reservation/conf/: BUILD.bazel  capacities.go  capacities_test.go  reservations.go  reservations_test.go
go/co/reservation/conf/testdata/: caps1.json  caps2.json  one_reservation.json  two_reservations.json
go/co/reservation/e2e/: BUILD.bazel  index.go  request.go  request_test.go  reservation.go  reservation_test.go  response.go
go/co/reservation/reservationdbtest/: BUILD.bazel  reservationdbtest.go
go/co/reservation/segment/: BUILD.bazel  index.go  index_test.go  request.go  reservation.go  reservation_test.go  response.go  response_test.go
go/co/reservation/segment/admission/: BUILD.bazel  admitter.go
go/co/reservation/segment/admission/stateful/: BUILD.bazel  stateful.go  stateful_test.go
go/co/reservation/segment/admission/stateless/: BUILD.bazel  stateless.go  stateless_test.go
go/co/reservation/segmenttest/: BUILD.bazel  common.go
go/co/reservation/sqlite/: BUILD.bazel  db.go  db_test.go  schema.go  transaction.go
go/co/reservation/test/: BUILD.bazel  common.go  mac.go  path.go
go/co/reservation/translate/: BUILD.bazel  fromprotobuf.go  toprotobuf.go
go/co/reservationstorage/: BUILD.bazel  store.go
go/co/reservationstorage/backend/: BUILD.bazel  db.go
go/co/reservationstorage/backend/mock_backend/: BUILD.bazel  mock.go
go/co/reservationstorage/mock_reservationstorage/: BUILD.bazel  mock.go
go/co/reservationstore/: BUILD.bazel  db_manip_test.go  drkey.go  drkey_test.go  export_test.go  keeper.go  keeper_test.go  manager.go  performance_test.go  store.go  store_test.go
go/co/reservationstore/mock_reservationstore/: BUILD.bazel  mock.go
go/colibri-cmd/: BUILD.bazel  index.go  main.go  traceroute.go
go/cs/: BUILD.bazel  main.go
go/cs/beaconing/: staticinfo_config.go  staticinfo_config_test.go
go/cs/config/: BUILD.bazel  config.go  drkey.go  drkey_test.go  sample.go
go/daemon/: BUILD.bazel  main.go
go/dispatcher/: main_test.go
go/dispatcher/dispatcher/: BUILD.bazel  dispatcher.go  underlay.go  underlay_test.go
go/integration/colibri/: BUILD.bazel  main.go
go/integration/end2end/: main.go
go/integration/end2end_integration/: main.go
go/lib/addr/: host.go
go/lib/colibri/: BUILD.bazel  colibri.go  colibri_test.go  drkey.go  drkey_test.go  e2e.go  listing.go  stitching.go  stitching_test.go
go/lib/colibri/addr/: BUILD.bazel  addr.go  addr_test.go
go/lib/colibri/client/: BUILD.bazel  reservation.go  reservation_test.go
go/lib/colibri/client/fallingback/: BUILD.bazel  functions.go  functions_test.go
go/lib/colibri/client/sorting/: BUILD.bazel  functions.go  functions_test.go
go/lib/colibri/coliquic/: BUILD.bazel  client.go  coliquic_test.go  persistent_quic.go  persistent_quic_listener.go  persistent_quic_test.go  server.go
go/lib/colibri/coltest/: BUILD.bazel  stitching.go
go/lib/colibri/dataplane/: BUILD.bazel  colibri.go  colibri_test.go
go/lib/colibri/reservation/: types.go  types_test.go
go/lib/ctrl/drkey/: BUILD.bazel  lvl1_req.go  lvl2_req.go  lvl2_req_test.go  protobuf_test.go  sv_req.go
go/lib/daemon/: BUILD.bazel  daemon.go  grpc.go
go/lib/drkey/: BUILD.bazel  db.go  drkey.go  epoch.go  generic.go  level1.go  level2.go  lvl1_req.go  lvl2_req.go  metrics.go  metrics_test.go  protobuf_test.go  protocol.go  protocol_test.go  secret_value.go  secret_value_test.go  specific.go  sv_req.go
go/lib/drkey/dbtest/: BUILD.bazel  dbtest.go
go/lib/drkey/drkeydbsqlite/: BUILD.bazel  base_db.go  db_test.go  lvl1db.go  lvl2db.go
go/lib/drkey/drkeyutil/: BUILD.bazel  util.go
go/lib/drkey/exchange/: BUILD.bazel  grpc.go
go/lib/drkey/fake/: BUILD.bazel  fake.go
go/lib/drkey/fetcher/: BUILD.bazel  fetcher.go  fetching_test.go
go/lib/drkey/protocol/: BUILD.bazel  colibri.go  delegated.go  protocol.go  protocol_test.go  standard.go
go/lib/drkey/protocoltest/: BUILD.bazel  commons.go
go/lib/drkey/sqlite/: BUILD.bazel  base_db.go  db_test.go  lvl1db.go  lvl2db.go  sv_db.go
go/lib/drkey/test/: BUILD.bazel  mock_keys.go
go/lib/drkeystorage/: BUILD.bazel  store.go
go/lib/drkeystorage/mock_drkeystorage/: BUILD.bazel  store.go
go/lib/epic/: epic_test.go
go/lib/pathpol/: sequence.go
go/lib/scrypto/: mac.go
go/lib/serrors/: errors.go
go/lib/slayers/: BUILD.bazel  scion.go  scion_test.go  scmp_test.go  slayers_test.go
go/lib/snet/: BUILD.bazel  packet.go  packet_test.go  path.go  reader.go  reply_pather.go  snet.go  writer.go
go/lib/svc/: messages.go  resolver.go  resolver_test.go  svc.go  svc_test.go
go/lib/topology/: interface.go  reload.go  servicetype.go  topology.go  validator.go
go/lib/util/: time.go
go/lib/xtest/: helpers.go
go/pkg/cs/: BUILD.bazel  tasks.go
go/pkg/daemon/: BUILD.bazel  daemon.go
go/pkg/discovery/: toposervice.go
go/pkg/gateway/: gateway.go
go/pkg/grpc/: dialer.go
go/pkg/pathprobe/: paths.go
go/pkg/router/: BUILD.bazel  colibri_processing.go  connector.go  dataplane.go  dataplane_test.go  export_test.go
go/pkg/scioncolibrisubcmd/: BUILD.bazel  colibrisubcmd.go  config.go
go/pkg/showpaths/: showpaths.go
go/pkg/storage/: BUILD.bazel  storage.go
go/pkg/traceroute/: traceroute.go
go/pkg/trust/: BUILD.bazel  tls_handshake.go  tls_handshake_test.go  transport_credentials.go  x509KeyPairProvider.go  x509KeyPairProvider_test.go
go/pktgen/: BUILD.bazel  config.go
go/posix-gateway/: main.go
go/scion/: BUILD.bazel  colibri.go  scion.go
proto/colibri/v1/: BUILD.bazel  colibri.proto  debug.proto
proto/control_plane/v1/: BUILD.bazel  drkey.proto  (+1 more)
proto/daemon/v1/: BUILD.bazel  daemon.proto
python/lib/: BUILD.bazel
python/topology/: common.py  generator.py  go.py  prometheus.py  supervisor.py  topo.py
(+262 files in other folders)
