load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("//lint:go.bzl", "go_library")
load("//:scion.bzl", "scion_go_binary")

go_binary(
    name = "co",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/scionproto/scion/go/co",
    visibility = ["//visibility:private"],
    deps = [
        "//go/co/reservation/conf:go_default_library",
        "//go/co/reservation/segment/admission/stateless:go_default_library",
        "//go/co/reservationstorage:go_default_library",
        "//go/co/reservationstore:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/colibri/coliquic:go_default_library",
        "//go/lib/fatal:go_default_library",
        "//go/lib/infra/infraenv:go_default_library",
        "//go/lib/infra/modules/itopo:go_default_library",
        "//go/lib/keyconf:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/periodic:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/topology:go_default_library",
        "//go/pkg/app/launcher:go_default_library",
        "//go/pkg/co/colibri/grpc:go_default_library",
        "//go/pkg/colibri/config:go_default_library",
        "//go/pkg/grpc:go_default_library",
        "//go/pkg/proto/colibri:go_default_library",
        "//go/pkg/storage:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
