load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("//lint:go.bzl", "go_library")
load("//:scion.bzl", "scion_go_binary")

go_binary(
    name = "colibri-cmd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "index.go",
        "main.go",
        "traceroute.go",
    ],
    importpath = "github.com/scionproto/scion/go/colibri-cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//go/co/reservation/translate:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/pkg/app:go_default_library",
        "//go/pkg/grpc:go_default_library",
        "//go/pkg/proto/colibri:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
