load("//lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "index.go",
        "path.go",
        "request_response.go",
        "types.go",
    ],
    importpath = "github.com/scionproto/scion/go/co/reservation",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/lib/slayers/path/colibri:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/util:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "index_test.go",
        "path_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/slayers/path/colibri:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/snet/path:go_default_library",
        "//go/lib/util:go_default_library",
        "//go/lib/xtest:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
