load("//lint:go.bzl", "go_library", "go_test")

go_test(
    name = "go_default_test",
    srcs = [
        "db_manip_test.go",
        "drkey_test.go",
        "export_test.go",
        "keeper_test.go",
        "performance_test.go",
        "store_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/co/reservation:go_default_library",
        "//go/co/reservation/e2e:go_default_library",
        "//go/co/reservation/segment:go_default_library",
        "//go/co/reservation/segmenttest:go_default_library",
        "//go/co/reservation/sqlite:go_default_library",
        "//go/co/reservation/test:go_default_library",
        "//go/co/reservationstorage:go_default_library",
        "//go/co/reservationstorage/backend:go_default_library",
        "//go/co/reservationstore/mock_reservationstore:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/colibri:go_default_library",
        "//go/lib/colibri/dataplane:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/daemon/mock_daemon:go_default_library",
        "//go/lib/drkey:go_default_library",
        "//go/lib/drkey/fake:go_default_library",
        "//go/lib/pathpol:go_default_library",
        "//go/lib/slayers/path/colibri:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/snet/path:go_default_library",
        "//go/lib/util:go_default_library",
        "//go/lib/xtest:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    srcs = [
        "drkey.go",
        "keeper.go",
        "manager.go",
        "store.go",
    ],
    importpath = "github.com/scionproto/scion/go/co/reservationstore",
    visibility = ["//visibility:public"],
    deps = [
        "//go/co/reservation:go_default_library",
        "//go/co/reservation/conf:go_default_library",
        "//go/co/reservation/e2e:go_default_library",
        "//go/co/reservation/segment:go_default_library",
        "//go/co/reservation/segment/admission:go_default_library",
        "//go/co/reservation/translate:go_default_library",
        "//go/co/reservationstorage:go_default_library",
        "//go/co/reservationstorage/backend:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/colibri:go_default_library",
        "//go/lib/colibri/coliquic:go_default_library",
        "//go/lib/colibri/dataplane:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/drkey:go_default_library",
        "//go/lib/drkey/fetcher:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/pathpol:go_default_library",
        "//go/lib/scrypto:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/lib/slayers/path/colibri:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/topology:go_default_library",
        "//go/lib/util:go_default_library",
        "//go/pkg/grpc:go_default_library",
        "//go/pkg/proto/colibri:go_default_library",
        "@com_github_dchest_cmac//:go_default_library",
    ],
)
