load("//lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "bs_sample.go",
        "config.go",
        "drkey.go",
        "sample.go",
    ],
    importpath = "github.com/scionproto/scion/go/cs/config",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/config:go_default_library",
        "//go/lib/drkey/protocol:go_default_library",
        "//go/lib/env:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/lib/util:go_default_library",
        "//go/pkg/api:go_default_library",
        "//go/pkg/api/jwtauth:go_default_library",
        "//go/pkg/storage:go_default_library",
        "//go/pkg/trust/config:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "config_test.go",
        "drkey_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/lib/env/envtest:go_default_library",
        "//go/lib/log/logtest:go_default_library",
        "//go/pkg/api/apitest:go_default_library",
        "//go/pkg/api/jwtauth:go_default_library",
        "//go/pkg/storage:go_default_library",
        "//go/pkg/storage/test:go_default_library",
        "@com_github_burntsushi_toml//:go_default_library",
        "@com_github_pelletier_go_toml//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
