load("//lint:go.bzl", "go_library")
load("//:scion.bzl", "scion_go_binary")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/scionproto/scion/go/integration/colibri",
    visibility = ["//visibility:private"],
    deps = [
        "//go/integration:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/colibri:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/daemon:go_default_library",
        "//go/lib/integration:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/lib/slayers/path/colibri:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/sock/reliable:go_default_library",
        "//go/lib/util:go_default_library",
    ],
)

scion_go_binary(
    name = "colibri",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
