load("//lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "drkey.go",
        "e2e.go",
        "listing.go",
        "stitching.go",
    ],
    importpath = "github.com/scionproto/scion/go/lib/colibri",
    visibility = ["//visibility:public"],
    deps = [
        "//go/co/reservation:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/drkey:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/snet/path:go_default_library",
        "//go/lib/util:go_default_library",
        "@com_github_dchest_cmac//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "drkey_test.go",
        "stitching_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/co/reservation:go_default_library",
        "//go/co/reservation/e2e:go_default_library",
        "//go/co/reservation/test:go_default_library",
        "//go/lib/colibri/coltest:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/util:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
