load("//lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "db.go",
        "drkey.go",
        "generic.go",
        "lvl1_req.go",
        "lvl2_req.go",
        "metrics.go",
        "protocol.go",
        "specific.go",
        "sv_req.go",
    ],
    importpath = "github.com/scionproto/scion/go/lib/drkey",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/infra/modules/db:go_default_library",
        "//go/lib/prom:go_default_library",
        "//go/lib/scrypto/cppki:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/lib/slayers/scion:go_default_library",
        "//go/lib/tracing:go_default_library",
        "//go/lib/util:go_default_library",
        "//go/pkg/proto/drkey:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
        "@org_golang_x_crypto//pbkdf2:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "metrics_test.go",
        "protobuf_test.go",
        "protocol_test.go",
        "secret_value_test.go",
    ],
    deps = [
        ":go_default_library",
        "//go/lib/drkey/dbtest:go_default_library",
        "//go/lib/drkey/protocoltest:go_default_library",
        "//go/lib/drkey/sqlite:go_default_library",
        "//go/lib/util:go_default_library",
        "//go/lib/xtest:go_default_library",
        "//go/pkg/proto/drkey:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
    ],
)
