load("//lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["store.go"],
    importpath = "github.com/scionproto/scion/go/lib/drkeystorage",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/drkey:go_default_library",
        "//go/lib/infra/modules/cleaner:go_default_library",
    ],
)
