load("//lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "colibrisubcmd.go",
        "config.go",
    ],
    importpath = "github.com/scionproto/scion/go/pkg/scioncolibrisubcmd",
    visibility = ["//visibility:public"],
    deps = [
        "//go/co/reservation:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/colibri:go_default_library",
        "//go/lib/daemon:go_default_library",
        "//go/lib/serrors:go_default_library",
        "@com_github_fatih_color//:go_default_library",
    ],
)
