load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "daemon",
    srcs = [
        "daemon.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//proto/drkey/mgmt/v1:drkey",
        "//proto/colibri/v1:colibri",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)
