load("//lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "capacities.go",
        "reservations.go",
    ],
    importpath = "github.com/scionproto/scion/go/co/reservation/conf",
    visibility = ["//visibility:public"],
    deps = [
        "//go/co/reservation:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/serrors:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "capacities_test.go",
        "reservations_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/xtest:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
