load("//lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "index.go",
        "request.go",
        "reservation.go",
        "response.go",
    ],
    importpath = "github.com/scionproto/scion/go/co/reservation/e2e",
    visibility = ["//visibility:public"],
    deps = [
        "//go/co/reservation:go_default_library",
        "//go/co/reservation/segment:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/lib/slayers/path/colibri:go_default_library",
        "//go/lib/slayers/path/colibri/addr:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "request_test.go",
        "reservation_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/co/reservation/segment:go_default_library",
        "//go/co/reservation/segmenttest:go_default_library",
        "//go/co/reservation/test:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/util:go_default_library",
        "//go/lib/xtest:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
