load("//lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["reservationdbtest.go"],
    importpath = "github.com/scionproto/scion/go/co/reservation/reservationdbtest",
    visibility = ["//visibility:public"],
    deps = [
        "//go/co/reservation/e2e:go_default_library",
        "//go/co/reservation/segment:go_default_library",
        "//go/co/reservation/segmenttest:go_default_library",
        "//go/co/reservation/test:go_default_library",
        "//go/co/reservationstorage/backend:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/util:go_default_library",
        "//go/lib/xtest:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
