load("//lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "db.go",
        "schema.go",
        "transaction.go",
    ],
    importpath = "github.com/scionproto/scion/go/co/reservation/sqlite",
    visibility = ["//visibility:public"],
    deps = [
        "//go/co/reservation:go_default_library",
        "//go/co/reservation/e2e:go_default_library",
        "//go/co/reservation/segment:go_default_library",
        "//go/co/reservationstorage/backend:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/infra/modules/db:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/lib/util:go_default_library",
        "@com_github_mattn_go_sqlite3//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["db_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//go/co/reservation/reservationdbtest:go_default_library",
        "//go/co/reservation/segment:go_default_library",
        "//go/co/reservation/test:go_default_library",
        "//go/co/reservationstorage/backend:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/util:go_default_library",
        "//go/lib/xtest:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
