load("//lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "common.go",
        "mac.go",
        "path.go",
    ],
    importpath = "github.com/scionproto/scion/go/co/reservation/test",
    visibility = ["//visibility:public"],
    deps = [
        "//go/co/reservation:go_default_library",
        "//go/co/reservation/segment:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/colibri/dataplane:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/slayers/path:go_default_library",
        "//go/lib/slayers/path/colibri:go_default_library",
        "//go/lib/slayers/path/scion:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/snet/path:go_default_library",
        "//go/lib/xtest:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
