load("//lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["db.go"],
    importpath = "github.com/scionproto/scion/go/co/reservationstorage/backend",
    visibility = ["//visibility:public"],
    deps = [
        "//go/co/reservation/e2e:go_default_library",
        "//go/co/reservation/segment:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/infra/modules/db:go_default_library",
    ],
)
