load("//lint:go.bzl", "go_library")
load("@com_github_jmhodges_bazel_gomock//:gomock.bzl", "gomock")

gomock(
    name = "go_default_mock",
    out = "mock.go",
    interfaces = ["Store"],
    library = "//go/co/reservationstorage:go_default_library",
    package = "mock_reservationstorage",
)

go_library(
    name = "go_default_library",
    srcs = ["mock.go"],
    importpath = "github.com/scionproto/scion/go/co/reservationstorage/mock_reservationstorage",
    visibility = ["//visibility:public"],
    deps = [
        "//go/co/reservation:go_default_library",
        "//go/co/reservation/e2e:go_default_library",
        "//go/co/reservation/segment:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/colibri:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/slayers/path/colibri:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
    ],
)
