load("//lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["addr.go"],
    importpath = "github.com/scionproto/scion/go/lib/colibri/addr",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/lib/slayers:go_default_library",
        "//go/lib/slayers/path/colibri:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["addr_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//go/lib/slayers:go_default_library",
        "//go/lib/xtest:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
