load("//lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["reservation.go"],
    importpath = "github.com/scionproto/scion/go/lib/colibri/client",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/colibri:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/daemon:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/periodic:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/spath:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["reservation_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//go/lib/colibri:go_default_library",
        "//go/lib/colibri/client/sorting:go_default_library",
        "//go/lib/colibri/coltest:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/daemon/mock_daemon:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/snet/path:go_default_library",
        "//go/lib/spath:go_default_library",
        "//go/lib/xtest:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
