load("//lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "persistent_quic.go",
        "persistent_quic_listener.go",
        "server.go",
    ],
    importpath = "github.com/scionproto/scion/go/lib/colibri/coliquic",
    visibility = ["//visibility:public"],
    deps = [
        "//go/co/reservation:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/daemon:go_default_library",
        "//go/lib/infra/infraenv:go_default_library",
        "//go/lib/infra/messenger:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/lib/slayers/path:go_default_library",
        "//go/lib/slayers/path/colibri:go_default_library",
        "//go/lib/slayers/path/empty:go_default_library",
        "//go/lib/slayers/path/onehop:go_default_library",
        "//go/lib/slayers/path/scion:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/snet/path:go_default_library",
        "//go/lib/snet/squic:go_default_library",
        "//go/lib/sock/reliable:go_default_library",
        "//go/lib/sock/reliable/reconnect:go_default_library",
        "//go/lib/svc:go_default_library",
        "//go/lib/topology:go_default_library",
        "//go/pkg/grpc:go_default_library",
        "//go/pkg/proto/colibri:go_default_library",
        "//go/pkg/proto/discovery:go_default_library",
        "@com_github_lucas_clemente_quic_go//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//peer:go_default_library",
        "@org_golang_google_grpc//stats:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "coliquic_test.go",
        "persistent_quic_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/co/reservation/test:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/slayers/path/colibri:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/lib/snet/mock_snet:go_default_library",
        "//go/lib/snet/path:go_default_library",
        "//go/lib/snet/squic:go_default_library",
        "//go/lib/topology:go_default_library",
        "//go/lib/xtest:go_default_library",
        "//go/pkg/grpc:go_default_library",
        "//go/pkg/grpc/mock_grpc:go_default_library",
        "//go/pkg/proto/colibri:go_default_library",
        "//go/pkg/proto/colibri/mock_colibri:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_lucas_clemente_quic_go//:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//peer:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
