load("//lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["stitching.go"],
    importpath = "github.com/scionproto/scion/go/lib/colibri/coltest",
    visibility = ["//visibility:public"],
    deps = [
        "//go/co/reservation:go_default_library",
        "//go/co/reservation/test:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/colibri:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/xtest:go_default_library",
    ],
)
