load("//lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["colibri.go"],
    importpath = "github.com/scionproto/scion/go/lib/colibri/dataplane",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/lib/slayers:go_default_library",
        "//go/lib/slayers/path/colibri:go_default_library",
        "//go/lib/util:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["colibri_test.go"],
    deps = [
        ":go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/slayers:go_default_library",
        "//go/lib/slayers/path/colibri:go_default_library",
        "//go/lib/slayers/scion:go_default_library",
        "//go/lib/xtest:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
