load("//lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "lvl1_req.go",
        "lvl2_req.go",
        "sv_req.go",
    ],
    importpath = "github.com/scionproto/scion/go/lib/ctrl/drkey",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/drkey:go_default_library",
        "//go/lib/scrypto/cppki:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/pkg/proto/drkey:go_default_library",
        "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["protobuf_test.go"],
    deps = [
        ":go_default_library",
        "//go/lib/drkey:go_default_library",
        "//go/lib/util:go_default_library",
        "//go/lib/xtest:go_default_library",
        "//go/pkg/proto/drkey:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
    ],
)
